# 4-TimPushkin

./: CMakeLists.txt
src/: bmp_handler.c  bmp_handler.h  comparer.c  converter.c  message_handler.c  qdbmp.c  return_codes.h  str_ending_comparer.c  str_ending_comparer.h
